--- a/defaulterror/404.html
+++ b/defaulterror/404.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - 404 Crying Baby</title>
+  <title>Charles Feng's warehouse</title>
   <style>
     *,
     *:after,
