fix: beian link

--- a/defaulterror/404.html
+++ b/defaulterror/404.html
@@ -544,7 +544,7 @@
   </div>
   <!-- partial -->
   <div class="footer">
-    <a class="footer-link" href="http://www.beian.miit.gov.cn">渝ICP备18013709号-3</a>
+    <a class="footer-link" href="https://beian.miit.gov.cn" target="_blank">渝ICP备18013709号-3</a>
   </div>
 
 </body>
